--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -50,6 +50,7 @@ steps:
          '-zone=${_ZONE}',
          '-project=$PROJECT_ID',
          '-image-name=${_TARGET_IMAGE_NAME}-${_SHORT_BUILD_ID}',
+         "-machine-type=t2a-standard-1",
          '-network=',
          '-subnet=',
          '-image-family=${_TARGET_IMAGE_FAMILY}',
